Name: reflex-dom
Version: 0.2
Synopsis: Functional Reactive Web Apps with Reflex
Description: Reflex-DOM is a Functional Reactive web framework based on the Reflex FRP engine
License: BSD3
License-file: LICENSE
Author: Ryan Trinkle
Maintainer: ryan.trinkle@gmail.com
Stability: Experimental
Category: FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
Build-type: Simple
Cabal-version: >=1.9.2
-- Deal with https://github.com/haskell/cabal/issues/2544 / https://github.com/haskell/cabal/issues/367
extra-source-files: src-ghc/Reflex/Dom/Internal/Foreign.hs
                    src-ghc/Reflex/Dom/Xhr/Foreign.hs
                    src-ghcjs/Reflex/Dom/Internal/Foreign.hs
                    src-ghcjs/Reflex/Dom/Xhr/Foreign.hs

library
  hs-source-dirs: src
  build-depends:
    base >= 4.7 && < 4.9,
    reflex == 0.3.*,
    dependent-sum == 0.2.*,
    dependent-map == 0.1.*,
    semigroups == 0.16.*,
    mtl >= 2.1 && < 2.3,
    containers == 0.5.*,
    these == 0.4.*,
    ref-tf == 0.4.*,
    transformers == 0.4.*,
    lens >= 4.7 && < 4.10,
    ghcjs-dom >= 0.1.1.3 && < 0.2,
    safe == 0.3.*,
    text == 1.2.*,
    bytestring == 0.10.*,
    data-default == 0.5.*,
    aeson == 0.8.*,
    time == 1.5.*,
    exception-transformers == 0.4.*,
    directory == 1.2.*,
    dependent-sum-template >= 0.0.0.4 && < 0.1,
    bifunctors == 4.2.*

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    cpp-options: -D__GHCJS__
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      glib == 0.13.*,
      gtk3 == 0.13.*,
      webkitgtk3 == 0.13.*,
      webkitgtk3-javascriptcore == 0.13.*

  exposed-modules:
    Reflex.Dom
    Reflex.Dom.Class
    Reflex.Dom.Internal
    Reflex.Dom.Widget
    Reflex.Dom.Widget.Basic
    Reflex.Dom.Widget.Input
    Reflex.Dom.Widget.Lazy
    Reflex.Dom.Xhr
    Reflex.Dom.Time
  other-modules:
    Reflex.Dom.Internal.Foreign
    Reflex.Dom.Xhr.Foreign

  other-extensions: TemplateHaskell
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

source-repository head
  type: git
  location: https://github.com/ryantrinkle/reflex
