cabal-version: 1.24
Name: reflex-dom-test-selenium
Version: 0.0.0.1
Synopsis: Testing framework for selenium tests
Description:
License: BSD3
License-file: LICENSE
Author: Ryan Trinkle
Maintainer: ryan.trinkle@gmail.com
Stability: Experimental
Category: FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
Build-type: Simple

library
  hs-source-dirs: src
  build-depends:
    async,
    base >= 4.7 && < 4.14,
    bytestring == 0.10.*,
    chrome-test-utils,
    exceptions,
    jsaddle >= 0.9.0.0 && < 0.10,
    jsaddle-warp,
    http-types,
    network,
    reflex-dom-core,
    process,
    silently,
    wai,
    warp,
    text == 1.2.*,
    websockets,
    hspec-webdriver,
    webdriver

  exposed-modules:
    Reflex.Dom.Test.Screenshot

  default-language: Haskell98
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively
